kubernetes/vault/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
    app.kubernetes.io/instance: vault
spec:
  replicas: 1
  serviceName: vault
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
      annotations:
        enable.version-checker.io/vault: "true"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      automountServiceAccountToken: false
      serviceAccountName: vault-sa
      containers:
        - image: vault:1.11.1
          imagePullPolicy: IfNotPresent
          name: vault
          readinessProbe:
            exec:
              command: ["/bin/sh", "-ec", "vault status -tls-skip-verify"]
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true
              scheme: HTTPS
              port: 8200
            initialDelaySeconds: 60
          ports:
            - containerPort: 443
              protocol: TCP
              name: unused-443
            - containerPort: 8200
              protocol: TCP
              name: vault
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            # runAsUser: 11000
            allowPrivilegeEscalation: false
            # seccompProfile:
            #   type: RuntimeDefault
            capabilities:
              drop:
                - all
            #   add:
            #     - IPC_LOCK
          command:
            - vault
            - server
            - -config=/vault/config/vault.json
          volumeMounts:
            - mountPath: /vault/file
              name: vault-pvc
            - mountPath: /vault/config
              name: vault-config
            - mountPath: /vault/cert
              name: vault-cert
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "150m"
      hostname: vault
      restartPolicy: Always
      volumes:
        - name: vault-config
          configMap:
            name: vault-config
        - name: vault-cert
          secret:
            secretName: vault-cert
        - name: vault-pvc
          persistentVolumeClaim:
            claimName: vault-pvc
