kubernetes/vault/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/instance: vault
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: vault
      protocol: TCP
      port: 443
      targetPort: 8200
  selector:
    app: vault
